tests/good/json3.lens
stream when (e.foo e.bar){
    print(e.message)
}
