tests/bad/entry_name.lens
stream(entry) when  (e.foo){
    print(e.foo)
}

